Supports /open in files, supports --add-module from command line