@@ -1,6 +1,11 @@
 import jdk.jshell.JShell;
 import com.beust.jcommander.JCommander;
 import com.beust.jcommander.Parameter;
+import jdk.jshell.SnippetEvent;
+import jdk.jshell.SourceCodeAnalysis;
+
+import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -8,13 +13,42 @@ import java.io.IOException;
 
 public class JShellRunner {
   @Parameter(description="args")
-  List<String> programArgs;
+  List<String> programArgs = new ArrayList<>();
 
   @Parameter(names="--startup", description="The startup script, if any")
   String startupScript;
 
   @Parameter(names="--class-path", description="The class-path for the remote agent, if any")
   String classpath;
+
+  @Parameter(names="--add-module", description="The modules for the remote agent, if any")
+  List<String> modules = new ArrayList<>();
+
+  private static void parseFile(JShell js, String file) throws IOException {
+    List<String> lines = Files.readAllLines(Paths.get(file));
+    SourceCodeAnalysis analysis = js.sourceCodeAnalysis();
+    Iterator<String> it = lines.iterator();
+    while ( it.hasNext() ) {
+      String snippet = it.next();
+      if ( snippet.startsWith("/") ) {
+          if ( snippet.startsWith("/open") ) {
+              parseFile(js, snippet.split(" ")[1]);
+          }
+      } else {
+          SourceCodeAnalysis.CompletionInfo info = analysis.analyzeCompletion(snippet);
+          SourceCodeAnalysis.Completeness completeness = info.completeness();
+          while (completeness != SourceCodeAnalysis.Completeness.COMPLETE &&
+                  completeness != SourceCodeAnalysis.Completeness.COMPLETE_WITH_SEMI &&
+                  completeness != SourceCodeAnalysis.Completeness.EMPTY) {
+              snippet += "\n" + it.next();
+              info = analysis.analyzeCompletion(snippet);
+              completeness = info.completeness();
+          }
+
+          js.eval(snippet);
+      }
+    }
+  }
 
   public static void main(String[] args) throws IOException {
     JShellRunner runner = new JShellRunner();
@@ -25,8 +59,17 @@ public class JShellRunner {
     List<String> programArgs = runner.programArgs;
     if ( !programArgs.isEmpty() ) {
       String program = programArgs.get(0);
-      try ( JShell js = JShell.create() )  {
-        js.onSnippetEvent(event -> System.out.println(event.value()));
+
+      JShell.Builder builder = JShell.builder()
+              .remoteVMOptions(runner.modules.stream().map(m -> "--add-modules=" + m).toArray(i -> new String[runner.modules.size()]))
+              .compilerOptions(runner.modules.stream().map(m -> "--add-modules=" + m).toArray(i -> new String[runner.modules.size()]));
+
+      try ( JShell js = builder.build() )  {
+        js.onSnippetEvent(event -> {
+            if ( event.value() != null ) {
+                System.out.println(event.value());
+            }
+        });
 
         if ( runner.classpath != null ) {
           js.addToClasspath(runner.classpath);
@@ -37,16 +80,10 @@ public class JShellRunner {
         }
 
         if ( runner.startupScript != null ) {
-          List<String> lines = Files.readAllLines(Paths.get(runner.startupScript));
-          for ( String line : lines ) {
-            js.eval(line);
-          }
+          parseFile(js, runner.startupScript);
         }
 
-        List<String> lines = Files.readAllLines(Paths.get(program));
-        for ( String line : lines ) {
-          js.eval(line);
-        }
+        parseFile(js, program);
       }
     } else {
       System.out.println("Nothing to do");
